--- a/dnd-util-react/src/App.css
+++ b/dnd-util-react/src/App.css
@@ -24,7 +24,9 @@ li a {
 li a:hover {
   background-color: #21201E;
   height: 100%;
+  cursor: pointer;
 }
+
 
 .appTitle {
   padding-right: 3rem;
@@ -36,17 +38,28 @@ li a:hover {
   background-color: #D81921;
   color: #E6E4FF;
   width: 100%;
-  padding: .5rem;
+  padding-top: .5rem;
 }
 
 .secondHeader {
   background-color: rgb(33, 32, 30);
   color: #E6E4FF;
-  padding: 2rem;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
   width: 100%;
 }
 
 .body {
   padding-top: 1rem;
   background-color: #F5F5F5;
+  padding-bottom: 1rem;
 }
+
+.footer {
+  background-color: rgb(33, 32, 30);
+  width: 100%;
+  height: 1rem;
+  padding-top: 3rem;
+  margin-bottom: 0rem;
+}
+
