--- a/dnd-util-react/src/App.css
+++ b/dnd-util-react/src/App.css
@@ -13,18 +13,45 @@ li {
   float: left;
 }
 
-li a {
-  display: block;
-  color: #E6E4FF;
+li a, .dropbtn {
+  display: inline-block;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
-li a:hover {
+li a:hover, .dropdown:hover .dropbtn {
   background-color: #21201E;
-  height: 100%;
-  cursor: pointer;
+}
+
+li.dropdown {
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 
@@ -50,16 +77,16 @@ li a:hover {
 }
 
 .body {
-  padding-top: 1rem;
+  /* padding-top: 1rem; */
   background-color: #F5F5F5;
-  padding-bottom: 1rem;
+  /* padding-bottom: 1rem; */
 }
 
 .footer {
+  position: absolute;
   background-color: rgb(33, 32, 30);
   width: 100%;
-  height: 1rem;
-  padding-top: 3rem;
-  margin-bottom: 0rem;
+  height: 2rem;
+
 }
 
