--- a/dnd-util-react/src/Databases/SpellList/SpellList.css
+++ b/dnd-util-react/src/Databases/SpellList/SpellList.css
@@ -5,8 +5,8 @@
     justify-content: center;
     padding: 2%;
     overflow-y: scroll;
-    height: 800px;
-    /* padding-bottom: rem; */
+    /* height: 100px; */
+    /* margin-bottom: 1rem; */
 }
 
 .singleSpell {
