--- a/dnd-util-react/src/App.css
+++ b/dnd-util-react/src/App.css
@@ -1,5 +1,6 @@
 .fullApp {
   text-align: center;
+  background-color: #F5F5F5;
 }
 
 ul {
@@ -84,6 +85,7 @@ li.dropdown {
 
 .footer {
   position: absolute;
+  bottom: 0;
   background-color: rgb(33, 32, 30);
   width: 100%;
   height: 2rem;
