--- a/dnd-util-react/src/Databases/SpellList/SingleSpell/SingleSpell.css
+++ b/dnd-util-react/src/Databases/SpellList/SingleSpell/SingleSpell.css
@@ -1,47 +1,52 @@
-.card {
+.body{
+    background-color: #F5F5F5;
     display: flex;
-    flex-direction: column;
-    box-shadow: 0 4px 8px 0 rgba(33,32,30,0.2);
-    transition: 0.3s;
-    width: 40%;
-    padding: 0% 0% 10%; 
-    margin: auto;
-    margin-top: 3rem;
-    
-  }
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 2%;
+    overflow-y: scroll;
+}
+
+.card {
+    border-radius: 5px;
+    background-color: white;
+    margin-left: 35%;
+    margin-right: 35%;
+    box-shadow: 0 8px 24px 0 rgba(33,32,30,0.2);
+
+}
 
 .card:hover {
-    box-shadow: 0 8px 24px 0 rgba(33,32,30,0.2);
+    box-shadow: 0 8px 24px 0 rgba(33,32,30,0.5);
 }
 
 .cardTitle {
     background-color: #D81921;
-    width: 100%;
-    padding-bottom: 2rem;
-    padding-top: 2rem;
-    align-content: center;
+    border: 1px solid black;
+    top: 0;
+    /* margin-left: 30%;
+    margin-right: 30%; */
 }
 
 .cardDescrip {
-    float: center;
-}
-
-.higherLvl {
-    float: left;
+    margin-left: 2%;
+    margin-right: 2%;
+    line-height: 30px;
 }
 
 .variTools {
-    /* position:relative; */
-    width: 200px;
-    float: right;
-    /* float: right; */
-    /* margin-left: 4rem; */
-    /* display: inline-block */
+    border: 1px solid black;
 }
 
-.cardFooter {
-    background-color: #21201E;
-    width: 100%;
-    height: 1rem;
-    /* padding-bottom: 0rem; */
+.spellLvl, .range, .components,
+.ritual, .duration, .conc,
+.castingTime {
+    padding: 10px;
+    font-weight: bold;
+}
+
+.cardFooter{
+    background-color: rgba(33,32,30);
+    height: 20px;
 }
