--- a/dnd-util-react/src/App.css
+++ b/dnd-util-react/src/App.css
@@ -84,11 +84,11 @@ li.dropdown {
 }
 
 .footer {
-  position: absolute;
+  flex-shrink: 0;
   bottom: 0;
   background-color: rgb(33, 32, 30);
   width: 100%;
   height: 2rem;
-
+  padding-top: 20px;
 }
 
