--- a/dnd-util-react/src/Tools/DiceRoller/DiceRoller.css
+++ b/dnd-util-react/src/Tools/DiceRoller/DiceRoller.css
@@ -1,9 +1,16 @@
+.diceBody {
+    display: flex;
+    justify-content: center;
+}
+
 .diceModule {
     width: 500px;
     height: 300px;
     border: 2px solid black;
     background-color: white;
     border-radius: 20px;
+    margin-top: 3vh;
+    
 }
 
 .diceModule:hover {
