--- a/dnd-util-react/src/Tools/HealthCounter/HealthCounter.css
+++ b/dnd-util-react/src/Tools/HealthCounter/HealthCounter.css
@@ -1,9 +1,15 @@
+.hpBody {
+    display: flex;
+    justify-content: center;
+}
+
 .hpModule {
     width: 500px;
     height: 300px;
     border: 2px solid black;
     background-color: white;
     border-radius: 20px;
+    margin-top: 3vh;
 }
 
 .hpModule:hover {
